2012-02-28 Maxim,Roman
- UI.Vision: The QImage is used for the pixels' drawing during the combination of fill color and image for the primitive ElFigure.
- UI.Vision: The coordinate's showing under the mouse cursor is added to the status bar for the developing mode of the primitive ElFigure.
- UI.Vision: The QMdiArea is used instead if the obsolete QWorkspace for the building the mdi interface.
- UI.Vision: The "Full screen" is added to the "View" section of the main menu.


2012-02-28 Roman
- !:UI.QTStarter: QT command line parameters, like -qws and -style, is forwarded from OpenSCADA module's parameters like --qws and --style.
    Print --help for see all list.
- FIX:UI.Vision: Child widgets selection and edit frame, dots is disabled for no "Box" zero level widgets.


2012-02-22 Roman
- !!!:UI.VCAEngine: Link type "wdg:" between widgets direct set allow and two types absolute and relative is added.
    To functions Widget::wdgAt() and Widget::attrAt() work with widget path is added.


2012-02-19 Roman
- !!!!:SYS: Build system have been significant updated for:
    - move I18N processing code to generic place and place it to modules Makefiles on configure;
    - generic macros AX_MOD_EN() is added for unified modules control into configure.in.
- FIX:Parameter: Parameters SHIFR copy prevent is fixed.


2012-02-17 Maxim
- FIX:UI.Vision, UI.WebVision: transparency calculation during the combination of fill color and image for the primitive ElFigure is fixed.


2012-02-17 Roman
- SYS: Realtime clock real hold accuracy control is added into tasks statistic table.
    Usefull for host system estimate to realtime.
- FIX:Transport.SSL, Transport.Sockets, Transport.Serial: Enable termination allow from wait for timeout expiration
    by pass EINTR result of select() processing. Usable for transports and it users disable ot exit.
- UI.QTCfg: Page replace is some changed from previous removing from QScrolArea place,